# SimpleModelLoader

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  stb_image.h
